--- a/packages/compendium-cdk/package.json
+++ b/packages/compendium-cdk/package.json
@@ -8,8 +8,8 @@
   "author": "Jakub Knejzlik",
   "dependencies": {
     "@aws-cdk/aws-appsync-alpha": "^2.55.1-alpha.0",
-    "aws-cdk": "^2.39.0",
-    "aws-cdk-lib": "^2.59.0",
+    "aws-cdk": "2.88.0",
+    "aws-cdk-lib": "2.88.0",
     "constructs": "^10.0.0"
   },
   "scripts": {
