--- a/packages/compendium-cli/Makefile
+++ b/packages/compendium-cli/Makefile
@@ -5,6 +5,8 @@ run:
 	go run main.go help
 run-put:
 	go run main.go put
+run-configure:
+	go run main.go configure
 
 publish-latest:
 	docker buildx build --platform linux/amd64 -t jakubknejzlik/compendium . && docker push jakubknejzlik/compendium
